@@ -1,4 +1,4 @@
-.TH SG_LOGS "8" "April 2007" "sg3_utils\-1.24" SG3_UTILS
+.TH SG_LOGS "8" "April 2011" "sg3_utils\-1.26" SG3_UTILS
 .SH NAME
 sg_logs \- access log pages with SCSI LOG SENSE command
 .SH SYNOPSIS
@@ -79,9 +79,10 @@ sets the "allocation length" field in the LOG SENSE cdb. The is the maximum
 length in bytes that the response will be. Without this option (or \fILEN\fR
 equal to 0) this utility first fetches the 4 byte response then does a second
 access with the length indicated in the first (4 byte) response. Negative
-values and 1 for \fILEN\fR are not accepted. Responses can be quite
-large (e.g. the background scan results log page) and this option can be
-used to limit the amount of information returned.
+values and 1 for \fILEN\fR are not accepted. \fILEN\fR cannot exceed
+65535 (0xffff).  Responses can be quite large (e.g. the background scan
+results log page) and this option can be used to limit the amount of
+information returned.
 .TP
 \fB\-n\fR, \fB\-\-name\fR
 decode some log pages into 'name=value' entries, one per line. The name
@@ -331,7 +332,7 @@ Written by Doug Gilbert
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2002\-2007 Douglas Gilbert
+Copyright \(co 2002\-2011 Douglas Gilbert
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
